# hub75-pico

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/sabspicomatrix/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/sabspicomatrix/: MainActivity.kt  MainApp.kt
android/app/src/main/java/com/example/sabspicomatrix/di/: ApplicationModule.kt
android/app/src/main/java/com/example/sabspicomatrix/repository/: BluetoothJob.kt  BluetoothRepository.kt  BluetoothThread.kt  PermissionRepository.kt
android/app/src/main/java/com/example/sabspicomatrix/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/example/sabspicomatrix/vm/: PermissionViewModel.kt  SimpleVM.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/sabspicomatrix/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
pico/: Cargo.toml
pico/src/: comms.rs  display.rs  display_core.rs  framebuffer.rs  lib.rs  lut.rs  main.rs  single_core_main.rs
pico/src/visualisation/: mod.rs  sand_pile.rs  test_vis.rs
src/: comms.rs  display.rs  framebuffer.rs  lib.rs  lut.rs  main.rs  main_back.rs
state-bindings/: Cargo.toml
state-bindings/src/: lib.rs
visualisation/: Cargo.toml
visualisation-sim/: Cargo.toml
visualisation-sim/src/: main.rs
visualisation/src/: game_of_life.rs  grid.rs  ising.rs  lib.rs  sand_pile.rs  test_vis.rs  turmite.rs
