[package]
name = "state-bindings"
version = "0.1.0"
edition = "2024"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
visualisation = { path = "../visualisation" }
uniffi = { version = "0.29", features = [ "cli" ] }
postcard = "1.1.3"

[build-dependencies]
uniffi = { version = "0.29", features = [ "build" ] }
